--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,33 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sobre</title>
-</head>
-<body>
-    <h1 style="text-align: center;">Diario do Professor</h1>
-    <hr>
+{%  extends 'base.html' %}
+{% block conteudo %}
+<h1 style="text-align: center;">Diario do Professor</h1>
+<hr>
     
-
-    <br>
-    <ul>
-        {% for registro in registros %}
+  {% for registro in registros %}
         
-        <details>
-            <summary>{{registro.aluno}}</summary>
-            <p>{{registro.nota}}</p>
-        </details>
-        {% endfor %}
-    </ul>
-
+  <!-- <details>
+  <summary>{{registro.aluno}}</summary>
+  <p>{{registro.nota}}</p>
+  </details> -->
+  <p>
+    <a class="btn btn-primary" data-bs-toggle="collapse" href="#collapse_{{ registro.aluno }}" role="button" aria-expanded="false" aria-controls="collapse_{{ registro.aluno }}">
+      {{registro.aluno}}
+    </a>
+  </p>
+  <div class="collapse" id="collapse_{{ registro.aluno }}">
+    <div class="card card-body">
+      {{registro.nota}}
+    </div>
+  </div>
+  {% endfor %}
+    
     <form action="{{url_for('sobre')}}" method="POST">
-        <label>Aluno</label>
-        <input type="text" name="aluno" required>
-        <label>Nota</label>
-        <input type="text" name="nota" required>
-        <button>Adicionar</button>
+        <div class="form-group">
+            <label>Aluno</label>
+            <input type="text" name="aluno" placeholder="Digite o nome do aluno" class="form-control" required>
+        </div>
+        <div>
+            <label>Nota</label>
+            <input type="text" name="nota" class="form-control" placeholder="Digite uma nota" required>
+            <button class="btn btn-success">Adicionar</button>
+        </div>
     </form>
-</body>
-</html>
+{% endblock conteudo %}
