--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block conteudo %}
-    <h2 style="text-align: center">Lista de Frutas</h2>
+    <h2 style="text-align: center">LISTA DE FRUTAS</h2>
     <hr>
 <ul class="list-group">
     {% for fruta in frutas%}
