--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -1,6 +1,6 @@
 {%  extends 'base.html' %}
 {% block conteudo %}
-<h1 style="text-align: center;">Diario do Professor</h1>
+<h1 style="text-align: center;">DIÁRIO DO PROFESSOR</h1>
 <hr>
     
   {% for registro in registros %}
