--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg bg-dark">
+    <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">AppPython</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,15 +23,19 @@
               <li class="nav-item">
                 <a class="nav-link" href="{{url_for('sobre')}}">sobre</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{url_for('lista_cursos')}}">Cursos</a>
+              </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown
+                  Filmes
                 </a>
                 <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                  <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='populares')}}">Mais Populares</a></li>
+                  <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='kids')}}">Kids</a></li>
+                  <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='2010')}}">2010</a></li>
+                  <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='drama')}}">Drama</a></li>
+                  <li><a class="dropdown-item" href="{{url_for('filmes', propriedade='tom_cruise')}}">Tom Cruise</a></li>
                 </ul>
               </li>
               <li class="nav-item">
